tests/fixtures/invalid-medium-in-dev.yaml
apiVersion: platform.parkglobal.io/v1alpha1
kind: DatabaseClaim
metadata:
  name: medium-in-dev-db
  namespace: team-parking-core
spec:
  owner:
    team: parking-core
    costCenter: CC-PARK-01
  engine: postgresql
  size: medium
  environment: dev
  access:
    readers: [grp-parking-core]
